--- a/data/en/service.yml
+++ b/data/en/service.yml
@@ -4,42 +4,42 @@ services:
   - title : "Web development"
     icon : "ti-desktop" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
+
   # service item loop
   - title : "Interface Design"
     icon : "ti-layers" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
+
   # service item loop
   - title : "Business Consulting"
     icon : "ti-bar-chart" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
+
   # service item loop
   - title : "Branding"
     icon : "ti-vector" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
+
   # service item loop
   - title : "App development"
     icon : "ti-android" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
+
   # service item loop
   - title : "Content creation"
     icon : "ti-pencil-alt" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
+
   # service item loop
   - title : "Business Consulting"
     icon : "ti-bar-chart" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
+
   # service item loop
   - title : "Branding"
     icon : "ti-vector" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
+
   # service item loop
   - title : "App development"
     icon : "ti-android" # themify icon pack: https://themify.me/themify-icons
@@ -48,7 +48,7 @@ services:
 
 ######################### pricing #####################################
 pricing:
-  enable : true
+  enable : false
   # pricing item comes from "pricing.yml" file
 
 ######################## Service step #################################
@@ -57,12 +57,12 @@ steps:
   step:
     # step loop
     - title : "Discuss with us"
-      content : "A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart" 
+      content : "A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart"
 
     # step loop
     - title : "Choose your perfect plan"
-      content : "A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart" 
-      
+      content : "A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart"
+
     # step loop
     - title : "Start your project"
       content : "A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart"
