--- a/config.toml
+++ b/config.toml
@@ -78,7 +78,7 @@ weight = 1
 
 #################### default parameters ################################
 [params]
-logo = "images/logo.png"
+logo = "images/logo3.jpeg"
 # top header
 top_header = true
 # Meta data
@@ -87,7 +87,7 @@ author = "Themefisher"
 # contact info
 address = "92 Church Rd, Ferndown, BH22 9EX"
 phone = "+44 7894142106"
-email = "info@dorsethouseclearance.com"
+email = "info@dorsethouseclearance.uk"
 # contact form action
 contact_form_action = "#" # contact form works with https://formspree.io
 # Google Analitycs
