--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://dhc.onrender.com/"
+baseURL = "https://dorsethouseclearance.uk/"
 title = "DHC | Dorset House Clearance"
 theme = "enov-hugo"
 # post pagination
