--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -2,7 +2,7 @@
 about:
   enable: true
   title : "A Small Team for Big Jobs"
-  content : "Myself (Mark) and Barry have been working together for 5 years. Alongside us we have a small group of trusted people. We work efficiently and quickly, and always endeavour, (after many years in customer service), to deliver what you the client have requested. Generally speaking, no job is too difficult, and we take pride in having customers who always come back to us, and always have something nice to say about us. We know house clearances are not a glamorous job, but they often involve sensitive circumstances and indeed, sensitive and private items. We hope we treat you the client, and equally, your effects, with respect."
+  content : "Baz and Mark have been working together for 5 years. Alongside us we have a small group of trusted people. We work efficiently and quickly, and always endeavour, (after many years in customer service), to deliver what you the client have requested. Generally speaking, no job is too difficult, and we take pride in having customers who always come back to us, and always have something nice to say about us. We know house clearances are not a glamorous job, but they often involve sensitive circumstances and indeed, sensitive and private items. We hope we treat you the client, and equally, your effects, with respect. The easiest way to contact us is by phone - 07793 251677, or 01202 896289"
 
 ##################### Funfacts ######################################
 funfacts:
